project(HackerRank)
cmake_minimum_required(VERSION 3.2)

add_executable( GridlandMetro  GridlandMetro.cpp )
add_executable( Astronauts  Astronauts.cpp )
add_executable( Equal Equal.cpp )
add_executable( thrones thrones.cpp )
add_executable( richie richie.cpp )
add_executable( CircularArray CircularArray.cpp )
add_executable( AVLtree AVLtree.cpp )
add_executable( Encryption Encryption.cpp )
add_executable( FlippingMatrix FlippingMatrix.cpp )
add_executable( MaxSubarray dynamic_programming/MaxSubarray.cpp )
add_executable( SherlockAndAnagrams strings/SherlockAndAnagrams.cpp )

